# rust-sensor

./: .containerignore  .editorconfig  .env.example  .envrc.example  .gitignore  Cargo.toml  Containerfile  README.md  build.rs  bun.lockb  compose.yml  crystal-sensor.service  flake.nix  gen_release.ts  getBulma.sh  justfile  migration-plan.md  move_data.sql  package.json  rust-sensor.service  rust-toolchain.toml  send_data.sh  sensornet_api.service  shard.yml  tempdash_schema.sql  todo.md
.sqlx/: query-077a7d1aa58929d3b4183a2856070ef1cab1ee9371f0852dd90f59bfe695db77.json  query-2893f2373701c1a3c9a573d8c327469c67a349a5b17b0af7f655173b32fd7bfe.json  query-34ba775aef5952f7f9e95e6d80c131bb86960f6e36c427e0835b4d545ef95a94.json  query-3d5ebcfb5aed4bf1ef1828f7457590b7c7272d40f47759a1a690cf403f9eed7c.json  query-78dbb8bd718db70f47b07a2e829adb67c63e243b1df91e124766a4c5197741a5.json  query-86bfda9c80452285f73cf189971be17ab8705ba628948a83864fb7f682a0e3ce.json  query-92f8de114c67996e956549190bb1ec1089922860a5586a652fa83d71dc66d829.json  query-ad2059b39db76c558550075a5c435a3c3c88afdf47c66c46b23e04b6f5145de5.json  query-ad5068e92de16e5391de77e986771c88c73458673e98a24bd7598f9416617e3e.json  query-dcfd191186e165632e551e1f8c18635631270a3b3465bdcf002260283d5db22f.json  query-ffc583173924fde0ddd1187110d1eb9bfbccfe756603e90bbb7ad173bdf30a2a.json
migrate/: 20240408003435_initial_create.down.cql  20240408003435_initial_create.up.cql
migrations/: 20240308184842_existing_schema.sql  20240308220210_create_monitor_schema.sql  20240308220322_create_table_stations.sql  (+5 more)
src/: container.cr  db.cr  (+6 more)
(+57 files in other folders)
