[package]
name = "rust_sensor"
version = "0.3.0"
edition = "2021"

[dependencies]
actix-web = "4"
sqlx = { version = "0.7", features = [ "postgres", "chrono", "runtime-tokio" ] }
dotenvy = { version = "0.15" }
chrono = { version = "0.4", features = [ "serde" ]}
tokio = { version = "1", features = ["full"] }
tera = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.10.1"
actix-web-static-files = "4.0.1"
static-files = "0.2.3"
actix-cors = "0.6.4"

[build-dependencies]
static-files = "0.2.3"
