[package]
name = "rust_sensor"
version = "0.6.0"
edition = "2021"

[dependencies]
actix-cors = "0.6.4"
actix-web = "4"
chrono = { version = "0.4", features = [ "serde" ]}
dotenvy = { version = "0.15" }
env_logger = "0.10.1"
log = "0.4.27"
once_cell = "1.21.3"
regex = "1.11.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7.3", features = [ "postgres", "chrono", "runtime-tokio", "bigdecimal" ] }
tokio = { version = "1", features = ["full"] }
validator = { version = "0.20.0", features = ["derive"] }
